@@ -1,4 +1,4 @@
-/**
+/*
  * The MIT License
  * Copyright (c) 2019- Nordic Institute for Interoperability Solutions (NIIS)
  * Copyright (c) 2018 Estonian Information System Authority (RIA),
@@ -31,14 +31,6 @@ import ee.ria.xroad.common.certificateprofile.AuthCertificateProfileInfo;
 import ee.ria.xroad.common.certificateprofile.CertificateProfileInfoProvider;
 import ee.ria.xroad.common.certificateprofile.GetCertificateProfile;
 import ee.ria.xroad.common.certificateprofile.SignCertificateProfileInfo;
-import ee.ria.xroad.common.conf.globalconf.sharedparameters.v2.ApprovedCATypeV2;
-import ee.ria.xroad.common.conf.globalconf.sharedparameters.v2.ApprovedTSAType;
-import ee.ria.xroad.common.conf.globalconf.sharedparameters.v2.GlobalGroupType;
-import ee.ria.xroad.common.conf.globalconf.sharedparameters.v2.MemberClassType;
-import ee.ria.xroad.common.conf.globalconf.sharedparameters.v2.MemberType;
-import ee.ria.xroad.common.conf.globalconf.sharedparameters.v2.OcspInfoType;
-import ee.ria.xroad.common.conf.globalconf.sharedparameters.v2.SecurityServerType;
-import ee.ria.xroad.common.conf.globalconf.sharedparameters.v2.SubsystemType;
 import ee.ria.xroad.common.identifier.ClientId;
 import ee.ria.xroad.common.identifier.GlobalGroupId;
 import ee.ria.xroad.common.identifier.SecurityServerId;
@@ -49,15 +41,19 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.bouncycastle.cert.X509CertificateHolder;
+import org.bouncycastle.operator.OperatorCreationException;
 
+import java.io.IOException;
+import java.nio.file.Path;
+import java.security.cert.CertificateEncodingException;
 import java.security.cert.X509Certificate;
-import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -67,6 +63,7 @@ import static ee.ria.xroad.common.ErrorCodes.translateException;
 import static ee.ria.xroad.common.ErrorCodes.translateWithPrefix;
 import static ee.ria.xroad.common.SystemProperties.getConfigurationPath;
 import static ee.ria.xroad.common.util.CryptoUtils.certHash;
+import static ee.ria.xroad.common.util.CryptoUtils.certSha1Hash;
 import static ee.ria.xroad.common.util.CryptoUtils.encodeBase64;
 import static ee.ria.xroad.common.util.CryptoUtils.readCertificate;
 
@@ -76,11 +73,11 @@ import static ee.ria.xroad.common.util.CryptoUtils.readCertificate;
 @Slf4j
 public class GlobalConfImpl implements GlobalConfProvider {
 
-    private volatile ConfigurationDirectoryV2 confDir;
+    private volatile VersionedConfigurationDirectory confDir;
 
     GlobalConfImpl() {
         try {
-            confDir = new ConfigurationDirectoryV2(getConfigurationPath());
+            confDir = new VersionedConfigurationDirectory(getConfigurationPath());
         } catch (Exception e) {
             throw translateWithPrefix(X_MALFORMED_GLOBALCONF, e);
         }
@@ -88,9 +85,9 @@ public class GlobalConfImpl implements GlobalConfProvider {
 
     @Override
     public void reload() {
-        ConfigurationDirectoryV2 original = confDir;
+        VersionedConfigurationDirectory original = confDir;
         try {
-            confDir = new ConfigurationDirectoryV2(getConfigurationPath(), original);
+            confDir = new VersionedConfigurationDirectory(getConfigurationPath(), original);
         } catch (Exception e) {
             throw translateWithPrefix(X_MALFORMED_GLOBALCONF, e);
         }
@@ -100,22 +97,11 @@ public class GlobalConfImpl implements GlobalConfProvider {
     @Override
     public boolean isValid() {
         // it is important to get handle of confDir as this variable is volatile
-        ConfigurationDirectoryV2 checkDir = confDir;
-        String mainInstance = checkDir.getInstanceIdentifier();
-        OffsetDateTime now = OffsetDateTime.now();
+        VersionedConfigurationDirectory checkDir = confDir;
         try {
-            if (now.isAfter(checkDir.getPrivate(mainInstance).getExpiresOn())) {
-                log.warn("Main privateParameters expired at {}", checkDir.getPrivate(mainInstance).getExpiresOn());
-                return false;
-            }
-            if (now.isAfter(checkDir.getShared(mainInstance).getExpiresOn())) {
-                log.warn("Main sharedParameters expired at {}", checkDir.getShared(mainInstance).getExpiresOn());
-                return false;
-            }
-            return true;
+            return !checkDir.isExpired();
         } catch (Exception e) {
             log.warn("Error checking global configuration validity", e);
-
             return false;
         }
     }
@@ -128,8 +114,8 @@ public class GlobalConfImpl implements GlobalConfProvider {
     @Override
     public List<String> getInstanceIdentifiers() {
         return getSharedParameters().stream()
-                .map(SharedParametersV2::getInstanceIdentifier)
-                .collect(Collectors.toList());
+                .map(SharedParameters::getInstanceIdentifier)
+                .toList();
     }
 
     @Override
@@ -137,13 +123,12 @@ public class GlobalConfImpl implements GlobalConfProvider {
             String... instanceIdentifiers) {
         List<SecurityServerId.Conf> serverIds = new ArrayList<>();
 
-        for (SharedParametersV2 p : getSharedParameters(instanceIdentifiers)) {
-            for (SecurityServerType s : p.getSecurityServers()) {
-                MemberType owner = SharedParametersV2.getOwner(s);
+        for (SharedParameters p : getSharedParameters(instanceIdentifiers)) {
+            for (SharedParameters.SecurityServer s : p.getSecurityServers()) {
                 serverIds.add(SecurityServerId.Conf.create(
-                        p.getInstanceIdentifier(),
-                        owner.getMemberClass().getCode(),
-                        owner.getMemberCode(), s.getServerCode()));
+                        p.getInstanceIdentifier(), s.getOwner().getMemberClass(),
+                        s.getOwner().getMemberCode(), s.getServerCode())
+                );
             }
         }
 
@@ -154,14 +139,12 @@ public class GlobalConfImpl implements GlobalConfProvider {
     public List<MemberInfo> getMembers(String... instanceIdentifiers) {
         List<MemberInfo> clients = new ArrayList<>();
 
-        for (SharedParametersV2 p : getSharedParameters(instanceIdentifiers)) {
-            for (MemberType member : p.getMembers()) {
-                clients.add(new MemberInfo(p.createMemberId(member), member
-                        .getName()));
+        for (SharedParameters p : getSharedParameters(instanceIdentifiers)) {
+            for (SharedParameters.Member member : p.getMembers()) {
+                clients.add(new MemberInfo(createMemberId(p, member), member.getName()));
 
-                for (SubsystemType subsystem : member.getSubsystem()) {
-                    clients.add(new MemberInfo(p.createSubsystemId(member,
-                            subsystem), member.getName()));
+                for (SharedParameters.Subsystem subsystem : member.getSubsystems()) {
+                    clients.add(new MemberInfo(createSubsystemId(p, member, subsystem), member.getName()));
                 }
             }
         }
@@ -169,69 +152,81 @@ public class GlobalConfImpl implements GlobalConfProvider {
         return clients;
     }
 
+    ClientId.Conf createMemberId(SharedParameters p, SharedParameters.Member member) {
+        return ClientId.Conf.create(p.getInstanceIdentifier(), member.getMemberClass().getCode(), member.getMemberCode());
+    }
+
+    ClientId.Conf createSubsystemId(SharedParameters p, SharedParameters.Member member, SharedParameters.Subsystem subsystem) {
+        return ClientId.Conf.create(
+                p.getInstanceIdentifier(), member.getMemberClass().getCode(),
+                member.getMemberCode(), subsystem.getSubsystemCode()
+        );
+    }
+
     @Override
     public String getMemberName(ClientId clientId) {
-        SharedParametersV2 p;
+        Optional<SharedParameters> p;
         try {
-            p = confDir.getShared(clientId.getXRoadInstance());
+            p = confDir.findShared(clientId.getXRoadInstance());
         } catch (Exception e) {
             throw new CodedException(X_INTERNAL_ERROR, e);
         }
 
-        return p == null ? null : p.getMembers().stream()
-                .filter(m -> p.createMemberId(m).memberEquals(clientId))
-                .map(MemberType::getName)
+        return p.flatMap(params -> params.getMembers().stream()
+                .filter(m -> createMemberId(p.get(), m).memberEquals(clientId))
+                .map(SharedParameters.Member::getName)
                 .findFirst()
-                .orElse(null);
+        ).orElse(null);
     }
 
     @Override
-    public List<GlobalGroupInfo> getGlobalGroups(
-            String... instanceIdentifiers) {
+    public List<GlobalGroupInfo> getGlobalGroups(String... instanceIdentifiers) {
         List<GlobalGroupInfo> globalGroups = new ArrayList<>();
-
-        for (SharedParametersV2 p : getSharedParameters(instanceIdentifiers)) {
-            for (GlobalGroupType globalGroup : p.getGlobalGroups()) {
+        for (SharedParameters p : getSharedParameters(instanceIdentifiers)) {
+            for (SharedParameters.GlobalGroup globalGroup : p.getGlobalGroups()) {
                 globalGroups.add(
-                        new GlobalGroupInfo(p.createGlobalGroupId(globalGroup),
-                                globalGroup.getDescription()));
+                        new GlobalGroupInfo(createGlobalGroupId(globalGroup, p), globalGroup.getDescription())
+                );
             }
         }
-
         return globalGroups;
+    }
+
+    GlobalGroupId.Conf createGlobalGroupId(SharedParameters.GlobalGroup globalGroup, SharedParameters p) {
+        return GlobalGroupId.Conf.create(p.getInstanceIdentifier(), globalGroup.getGroupCode());
     }
 
     @Override
     public String getGlobalGroupDescription(GlobalGroupId globalGroupId) {
-        SharedParametersV2 p;
+        Optional<SharedParameters> p;
         try {
-            p = confDir.getShared(globalGroupId.getXRoadInstance());
+            p = confDir.findShared(globalGroupId.getXRoadInstance());
         } catch (Exception e) {
             throw new CodedException(X_INTERNAL_ERROR, e);
         }
 
-        return p == null ? null : p.getGlobalGroups().stream()
-                .filter(g -> g.getGroupCode().equals(
-                        globalGroupId.getGroupCode()))
-                .map(GlobalGroupType::getDescription)
-                .findFirst().orElse(null);
+        return p.flatMap(params -> params.getGlobalGroups().stream()
+                .filter(g -> g.getGroupCode().equals(globalGroupId.getGroupCode()))
+                .map(SharedParameters.GlobalGroup::getDescription)
+                .findFirst()
+        ).orElse(null);
     }
 
     @Override
     public Set<String> getMemberClasses(String... instanceIdentifiers) {
         return getSharedParameters(instanceIdentifiers).stream()
-                .flatMap(p -> p.getGlobalSettings().getMemberClass().stream())
-                .map(MemberClassType::getCode)
+                .flatMap(p -> p.getGlobalSettings().getMemberClasses().stream())
+                .map(SharedParameters.MemberClass::getCode)
                 .collect(Collectors.toSet());
     }
 
     @Override
     public Collection<String> getProviderAddress(ClientId clientId) {
         if (clientId == null) {
-            return null;
+            return Collections.emptySet();
         }
 
-        SharedParametersV2 p = getSharedParameters(clientId.getXRoadInstance());
+        SharedParameters p = getSharedParameters(clientId.getXRoadInstance());
         return p.getMemberAddresses().get(clientId);
     }
 
@@ -241,10 +236,10 @@ public class GlobalConfImpl implements GlobalConfProvider {
             return null;
         }
 
-        SharedParametersV2 p = getSharedParameters(serverId.getXRoadInstance());
-        final SecurityServerType serverType = p.getSecurityServersById().get(serverId);
-        if (serverType != null) {
-            return serverType.getAddress();
+        SharedParameters p = getSharedParameters(serverId.getXRoadInstance());
+        final SharedParameters.SecurityServer server = p.getSecurityServersById().get(serverId);
+        if (server != null) {
+            return server.getAddress();
         }
 
         return null;
@@ -259,8 +254,8 @@ public class GlobalConfImpl implements GlobalConfProvider {
             throws Exception {
         List<String> responders = new ArrayList<>();
 
-        for (SharedParametersV2 p : getSharedParameters()) {
-            List<OcspInfoType> caOcspData = null;
+        for (SharedParameters p : getSharedParameters()) {
+            List<SharedParameters.OcspInfo> caOcspData = null;
             X509Certificate caCert;
             try {
                 if (!certificateIsCA) {
@@ -275,7 +270,7 @@ public class GlobalConfImpl implements GlobalConfProvider {
             if (caOcspData == null) {
                 continue;
             }
-            caOcspData.stream().map(OcspInfoType::getUrl)
+            caOcspData.stream().map(SharedParameters.OcspInfo::getUrl)
                     .filter(StringUtils::isNotBlank)
                     .map(String::trim)
                     .forEach(responders::add);
@@ -299,10 +294,10 @@ public class GlobalConfImpl implements GlobalConfProvider {
     public List<X509Certificate> getOcspResponderCertificates() {
         List<X509Certificate> responderCerts = new ArrayList<>();
         try {
-            for (SharedParametersV2 p : getSharedParameters()) {
-                for (List<OcspInfoType> ocspTypes
-                        : p.getCaCertsAndOcspData().values()) {
-                    ocspTypes.stream().map(OcspInfoType::getCert)
+            for (SharedParameters p : getSharedParameters()) {
+                for (List<SharedParameters.OcspInfo> ocsps : p.getCaCertsAndOcspData().values()) {
+                    ocsps.stream()
+                            .map(SharedParameters.OcspInfo::getCert)
                             .filter(Objects::nonNull)
                             .map(CryptoUtils::readCertificate)
                             .forEach(responderCerts::add);
@@ -345,7 +340,7 @@ public class GlobalConfImpl implements GlobalConfProvider {
     public List<X509Certificate> getAllCaCerts() {
         return getSharedParameters().stream()
                 .flatMap(p -> p.getSubjectsAndCaCerts().values().stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -357,27 +352,36 @@ public class GlobalConfImpl implements GlobalConfProvider {
     public CertChain getCertChain(String instanceIdentifier,
             X509Certificate subject) throws Exception {
         if (subject == null) {
-            throw new IllegalArgumentException(
-                    "Member certificate must be present to find cert chain!");
+            throw new IllegalArgumentException("Member certificate must be present to find cert chain!");
         }
 
         List<X509Certificate> chain = new ArrayList<>();
         chain.add(subject);
 
-        SharedParametersV2 p = getSharedParameters(instanceIdentifier);
+        SharedParameters sharedParams = getSharedParameters(instanceIdentifier);
 
-        X509Certificate ca = p.getCaCertForSubject(subject);
+        X509Certificate ca = getCaCertForSubject(subject, sharedParams);
         while (ca != null) {
             chain.add(ca);
-            ca = p.getCaCertForSubject(ca);
+            ca = getCaCertForSubject(ca, sharedParams);
         }
 
-        if (chain.size() < 2) { // did not found any CA certs
+        if (chain.size() < 2) { // did not find any CA certs
             return null;
         }
 
-        return CertChain.create(instanceIdentifier,
-                chain.toArray(new X509Certificate[chain.size()]));
+        return CertChain.create(instanceIdentifier, chain.toArray(new X509Certificate[chain.size()]));
+    }
+
+    X509Certificate getCaCertForSubject(X509Certificate subject, SharedParameters sharedParameters)
+            throws CertificateEncodingException, IOException {
+        X509CertificateHolder certHolder =
+                new X509CertificateHolder(subject.getEncoded());
+        if (certHolder.getSubject().equals(certHolder.getIssuer())) {
+            return null;
+        }
+
+        return sharedParameters.getSubjectsAndCaCerts().get(certHolder.getIssuer());
     }
 
     @Override
@@ -385,11 +389,10 @@ public class GlobalConfImpl implements GlobalConfProvider {
             X509Certificate ocspCert) {
         return getSharedParameters().stream()
                 .map(p -> p.getCaCertsAndOcspData().get(ca))
-                .filter(Objects::nonNull).flatMap(o -> o.stream())
-                .map(OcspInfoType::getCert).filter(Objects::nonNull)
+                .filter(Objects::nonNull).flatMap(Collection::stream)
+                .map(SharedParameters.OcspInfo::getCert).filter(Objects::nonNull)
                 .map(CryptoUtils::readCertificate)
-                .filter(c -> c.equals(ocspCert))
-                .findFirst().isPresent();
+                .anyMatch(c -> c.equals(ocspCert));
     }
 
     @Override
@@ -403,45 +406,57 @@ public class GlobalConfImpl implements GlobalConfProvider {
     }
 
     @Override
-    public SecurityServerId.Conf getServerId(X509Certificate cert)
-            throws Exception {
-        String b64 = encodeBase64(certHash(cert));
-
-        for (SharedParametersV2 p : getSharedParameters()) {
-            SecurityServerType serverType = p.getServerByAuthCert().get(b64);
-            if (serverType != null) {
-                MemberType owner = SharedParametersV2.getOwner(serverType);
-                return SecurityServerId.Conf.create(p.getInstanceIdentifier(),
-                        owner.getMemberClass().getCode(),
-                        owner.getMemberCode(),
-                        serverType.getServerCode());
-            }
-        }
-
-        return null;
-    }
-
-    @Override
-    public ClientId.Conf getServerOwner(SecurityServerId serverId) {
-        for (SharedParametersV2 p : getSharedParameters()) {
-            SecurityServerType server = p.getSecurityServersById()
-                    .get(serverId);
+    public SecurityServerId.Conf getServerId(X509Certificate cert) throws Exception {
+        for (SharedParameters p : getSharedParameters()) {
+            String b64 = encodeBase64(calculateCertHash(p, cert));
+            SharedParameters.SecurityServer server = p.getServerByAuthCert().get(b64);
             if (server != null) {
-                return p.createMemberId((MemberType) server.getOwner());
+                return SecurityServerId.Conf.create(
+                        p.getInstanceIdentifier(), server.getOwner().getMemberClass(),
+                        server.getOwner().getMemberCode(), server.getServerCode()
+                );
             }
         }
 
         return null;
     }
 
+    private byte[] calculateCertHash(SharedParameters p, X509Certificate cert)
+            throws CertificateEncodingException, IOException, OperatorCreationException {
+        Integer version = VersionedConfigurationDirectory.getVersion(
+                Path.of(confDir.getPath().toString(), p.getInstanceIdentifier(), ConfigurationConstants.FILE_NAME_SHARED_PARAMETERS)
+        );
+        if (version != null && version > 2) {
+            return certHash(cert.getEncoded());
+        } else {
+            return certSha1Hash(cert.getEncoded());
+        }
+    }
+
     @Override
-    public boolean authCertMatchesMember(X509Certificate cert,
-            ClientId memberId) throws Exception {
-        byte[] inputCertHash = certHash(cert);
-        return getSharedParameters().stream()
-                .map(p -> p.getMemberAuthCerts().get(memberId))
-                .filter(Objects::nonNull).flatMap(Collection::stream)
-                .anyMatch(h -> Arrays.equals(inputCertHash, h));
+    public ClientId getServerOwner(SecurityServerId serverId) {
+        for (SharedParameters p : getSharedParameters()) {
+            SharedParameters.SecurityServer server = p.getSecurityServersById().get(serverId);
+            if (server != null) {
+                return server.getOwner();
+            }
+        }
+        return null;
+    }
+
+    @Override
+    public boolean authCertMatchesMember(X509Certificate cert, ClientId memberId)
+            throws CertificateEncodingException, IOException, OperatorCreationException {
+        for (SharedParameters p : getSharedParameters()) {
+            byte[] inputCertHash = calculateCertHash(p, cert);
+            boolean match = Optional.ofNullable(p.getMemberAuthCerts().get(memberId)).stream()
+                    .flatMap(Collection::stream)
+                    .anyMatch(h -> Arrays.equals(inputCertHash, h));
+            if (match) {
+                return true;
+            }
+        }
+        return false;
     }
 
     @Override
@@ -449,14 +464,14 @@ public class GlobalConfImpl implements GlobalConfProvider {
             String instanceIdentifier) {
         return getSharedParameters(instanceIdentifier).getApprovedCAs()
             .stream()
-            .map(ca -> createApprovedCAInfo(ca))
-            .collect(Collectors.toList());
+            .map(this::createApprovedCAInfo)
+            .toList();
     }
 
-    private ApprovedCAInfo createApprovedCAInfo(ApprovedCATypeV2 ca) {
+    private ApprovedCAInfo createApprovedCAInfo(SharedParameters.ApprovedCA ca) {
         return new ApprovedCAInfo(
             ca.getName(),
-            ca.isAuthenticationOnly(),
+            ca.getAuthenticationOnly(),
             ca.getCertificateProfileInfo()
         );
     }
@@ -490,14 +505,14 @@ public class GlobalConfImpl implements GlobalConfProvider {
     }
 
     @Override
-    public List<String> getApprovedTsps(String instanceIdentifier) {
+    public List<String> getApprovedTspUrls(String instanceIdentifier) {
         return getSharedParameters(instanceIdentifier).getApprovedTSAs()
-                .stream().map(ApprovedTSAType::getUrl)
-                .collect(Collectors.toList());
+                .stream().map(SharedParameters.ApprovedTSA::getUrl)
+                .toList();
     }
 
     @Override
-    public List<ApprovedTSAType> getApprovedTspTypes(String instanceIdentifier) {
+    public List<SharedParameters.ApprovedTSA> getApprovedTsps(String instanceIdentifier) {
         return getSharedParameters(instanceIdentifier).getApprovedTSAs();
     }
 
@@ -506,17 +521,17 @@ public class GlobalConfImpl implements GlobalConfProvider {
             String approvedTspUrl) {
         return getSharedParameters(instanceIdentifier).getApprovedTSAs()
                 .stream().filter(t -> t.getUrl().equals(approvedTspUrl))
-                .map(ApprovedTSAType::getName).findFirst().orElse(null);
+                .map(SharedParameters.ApprovedTSA::getName).findFirst().orElse(null);
     }
 
     @Override
     public List<X509Certificate> getTspCertificates() throws Exception {
         return getSharedParameters().stream()
                 .flatMap(p -> p.getApprovedTSAs().stream())
-                .map(ApprovedTSAType::getCert)
+                .map(SharedParameters.ApprovedTSA::getCert)
                 .filter(Objects::nonNull)
                 .map(CryptoUtils::readCertificate)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -527,34 +542,23 @@ public class GlobalConfImpl implements GlobalConfProvider {
     }
 
     @Override
-    public boolean isSubjectInGlobalGroup(ClientId subjectId,
-            GlobalGroupId groupId) {
+    public boolean isSubjectInGlobalGroup(ClientId subjectId, GlobalGroupId groupId) {
+        return findGlobalGroup(groupId)
+                .filter(group -> group.getGroupMembers().stream().anyMatch(m -> m.equals(subjectId)))
+                .isPresent();
+    }
 
-        SharedParametersV2 p;
-        try {
-            p = confDir.getShared(groupId.getXRoadInstance());
-        } catch (Exception e) {
-            p = null;
-            log.warn("Got exception while getting shared parameters.", e);
-        }
-
-        if (p == null) {
-            return false;
-        }
-
-        GlobalGroupType group = p.findGlobalGroup(groupId);
-        if (group == null) {
-            return false;
-        }
-
-        return group.getGroupMember().stream().filter(m -> m.equals(subjectId))
-                .findFirst().isPresent();
+    Optional<SharedParameters.GlobalGroup> findGlobalGroup(GlobalGroupId groupId) {
+        Optional<SharedParameters> sharedParameters = confDir.findShared(groupId.getXRoadInstance());
+        return sharedParameters.flatMap(params -> params.getGlobalGroups().stream()
+                        .filter(g -> g.getGroupCode().equals(groupId.getGroupCode()))
+                        .findFirst());
     }
 
     @Override
     public boolean isSecurityServerClient(ClientId clientId,
             SecurityServerId securityServerId) {
-        SharedParametersV2 p = getSharedParameters(securityServerId
+        SharedParameters p = getSharedParameters(securityServerId
                 .getXRoadInstance());
         return p.getSecurityServerClients().containsKey(securityServerId)
                 && p.getSecurityServerClients().get(securityServerId)
@@ -563,7 +567,7 @@ public class GlobalConfImpl implements GlobalConfProvider {
 
     @Override
     public boolean existsSecurityServer(SecurityServerId securityServerId) {
-        SharedParametersV2 p = getSharedParameters(securityServerId
+        SharedParameters p = getSharedParameters(securityServerId
                 .getXRoadInstance());
 
         return p.getSecurityServersById().containsKey(securityServerId);
@@ -573,7 +577,7 @@ public class GlobalConfImpl implements GlobalConfProvider {
     public List<X509Certificate> getVerificationCaCerts() {
         return getSharedParameters().stream()
                 .flatMap(p -> p.getVerificationCaCerts().stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -609,40 +613,31 @@ public class GlobalConfImpl implements GlobalConfProvider {
 
     // ------------------------------------------------------------------------
 
-    protected PrivateParametersV2 getPrivateParameters() {
-        PrivateParametersV2 p;
+    protected PrivateParameters getPrivateParameters() {
+        Optional<PrivateParameters> p;
         try {
-            p = confDir.getPrivate(getInstanceIdentifier());
+            p = confDir.findPrivate(getInstanceIdentifier());
         } catch (Exception e) {
             throw new CodedException(X_INTERNAL_ERROR, e);
         }
 
-        if (p == null) {
-            throw new CodedException(X_INTERNAL_ERROR,
-                    "Invalid instance identifier: %s",
-                    getInstanceIdentifier());
-        }
-
-        return p;
+        return p.orElseThrow(() ->
+                new CodedException(X_INTERNAL_ERROR, "Private params for instance identifier %s not found", getInstanceIdentifier()));
     }
 
-    protected SharedParametersV2 getSharedParameters(String instanceIdentifier) {
-        SharedParametersV2 p;
+    protected SharedParameters getSharedParameters(String instanceIdentifier) {
+        Optional<SharedParameters> p;
         try {
-            p = confDir.getShared(instanceIdentifier);
+            p = confDir.findShared(instanceIdentifier);
         } catch (Exception e) {
             throw new CodedException(X_INTERNAL_ERROR, e);
         }
 
-        if (p == null) {
-            throw new CodedException(X_INTERNAL_ERROR,
-                    "Invalid instance identifier: %s", instanceIdentifier);
-        }
-
-        return p;
+        return p.orElseThrow(() ->
+                new CodedException(X_INTERNAL_ERROR, "Shared params for instance identifier %s not found", instanceIdentifier));
     }
 
-    protected List<SharedParametersV2> getSharedParameters(
+    protected List<SharedParameters> getSharedParameters(
             String... instanceIdentifiers) {
         if (ArrayUtils.isEmpty(instanceIdentifiers)) {
             return confDir.getShared();
@@ -650,13 +645,13 @@ public class GlobalConfImpl implements GlobalConfProvider {
 
         return Arrays.stream(instanceIdentifiers)
                 .map(this::getSharedParameters)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private CertificateProfileInfoProvider getCertProfile(
             String instanceIdentifier, X509Certificate cert) throws Exception {
         X509Certificate caCert = getCaCert(instanceIdentifier, cert);
-        SharedParametersV2 p = getSharedParameters(instanceIdentifier);
+        SharedParameters p = getSharedParameters(instanceIdentifier);
 
         String certProfileProviderClass =
                 p.getCaCertsAndCertProfiles().get(caCert);
@@ -672,16 +667,16 @@ public class GlobalConfImpl implements GlobalConfProvider {
     @Override
     public ApprovedCAInfo getApprovedCA(
             String instanceIdentifier, X509Certificate cert) throws CodedException {
-        SharedParametersV2 p = getSharedParameters(instanceIdentifier);
+        SharedParameters p = getSharedParameters(instanceIdentifier);
 
-        ApprovedCATypeV2 approvedCAType = p.getCaCertsAndApprovedCAData().get(cert);
-        if (approvedCAType == null) {
+        SharedParameters.ApprovedCA approvedCA = p.getCaCertsAndApprovedCAData().get(cert);
+        if (approvedCA == null) {
             throw new CodedException(X_INTERNAL_ERROR,
                     "Could not find approved CA info for certificate "
                             + cert.getSubjectX500Principal().getName());
         }
 
-        return createApprovedCAInfo(approvedCAType);
+        return createApprovedCAInfo(approvedCA);
     }
 
 }
